--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ blog_button:
 
 # Navigation buttons in the front page.s
 nav:
-    - {title: Articles, description: archive, url: '/archive'}
+    - {title: Suggested Readings, description: archive, url: '/archive'}
     - {title: Category, description: tags, url: '/tags'}
     - {title: Support, description: support, url: '/support'}
     - {title: About Me, description: about, url: '/about'}
